--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "test:ci": "ng test --no-watch"
+    "test:ci": "LANG=C TZ=GMT ng test --no-watch"
   },
   "private": true,
   "dependencies": {
